# runforge-desktop

./: .editorconfig  .gitignore  CHANGELOG.md  Directory.Build.props  PRIVACY.md  README.md  RELEASE_NOTES_v0.3.3.md  RELEASE_NOTES_v0.3.4.md  RELEASE_NOTES_v0.3.5.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RunForgeDesktop.sln  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
docs/: BETA_READINESS_CHECKLIST.md  BUTTON_COVERAGE_INVENTORY.md  DEMO_SCRIPT.md  GAUNTLETS.md  GAUNTLETS_RESULTS.md  GAUNTLETS_RESULTS_v040.md  INSTALL.md  INSTALL_MSIX.md  LIVE_MONITORING.md  MARKETING_ASSETS.md  PACKAGING_MSIX.md  PHASE-DESKTOP-0.1-ACCEPTANCE.md  PHASE11_AUDIT.md  PHASE12_AUDIT.md  PRODUCT_MAP.md  QUEUE_V1_CONTRACT.md  RELEASE_NOTES_v0.1.1.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASE_NOTES_v0.2.3.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.1.md  RELEASE_NOTES_v0.3.2.md  RELEASE_PROCESS.md  RESULT_V1_CONTRACT.md  RunForge v1 Roadmap.txt  SWEEP_V1_CONTRACT.md  UI_V1_VISUALS.md  UX_CONSISTENCY_AUDIT.md  VM_INSTALL_RUNBOOK.md  WHAT_RUNFORGE_DESKTOP_IS.md
scripts/: build-msix.ps1  build-release.cmd  capture-app.ps1  check-process.ps1  (+4 more)
src/runforge-cli/: README.md  pyproject.toml
src/runforge-cli/runforge_cli/: __init__.py  __main__.py  cli.py  daemon.py  dry_run.py  enqueue.py  exit_codes.py  gpu.py  logger.py  queue.py  request.py  result.py  runner.py  sweep.py  tokens.py
src/runforge-cli/tests/: __init__.py  test_exit_codes.py  test_gpu.py  test_queue.py  test_request.py  test_result.py  test_sweep.py  test_tokens.py
(+184 files in other folders)
